apps/demo/podinfo/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: podinfo
spec:
  hosts:
    - podinfo.dev.techbrewhq.com
  gateways:
    - istio-tenant-gateway/istio-tenant-gateway # This refers to the specific gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: podinfo
            port:
              number: 9898
